--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RESTFul API",
+  "name": "BookAPI",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.12.4",
     "gulp": "^3.8.11",
-    "gulp-nodemon": "^2.0.3"
+    "gulp-nodemon": "^2.0.3",
+    "mongoose": "^4.0.4"
   }
 }
